<resources>
    <string name="app_name">Mobile Book App</string>
    <string name="icon_app_name">Mobile\nBook App</string>
    <string name="registerActionBarText">Register to get Started</string>
    <string name="homeActionBarText">Welcome to your Bookshelf!</string>
    <string name="searchBookDB">Search our Book Database</string>
    <string name="BooksListActionBarText">Your Books</string>
    <string name="homeWelcomeText">My Bookshelf</string>
    <string name="loginButton">Login</string>
    <string name="checkRememberMe">Remember Me?</string>
    <string name="action_settings">Settings</string>
    <string name="removeButton">Remove</string>
    <string name="book_info">Book Information</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author(s)</string>
    <string name="book_ISBN">ISBN</string>
    <string name="book_format">Format</string>
    <string name="book_pub_date">Pub. Date</string>
    <string name="book_edition">Edition</string>
    <string name="book_status">Status</string>
    <string name="searchButton">Search</string>
    <string name="find_book">Find A Book</string>
    <string name="myBookShelf">View Bookshelf</string>
    <string name="searchForBooks">Search For New Books!</string>
    <string name="searchBookResults">Book Search Results</string>
    <string name="registerButton">Register</string>
    <string name="registrationText">Registration</string>
    <string name="viewFavorites">View Favorites</string>
    <string name="favoritesPage">Your Favorite Books</string>
    <string name="viewBooksRead">View Books Read</string>
    <string name="booksReadPage">Books You Have Read</string>
</resources>