<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideOverlay" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#4A148C"
        android:fadingEdge="horizontal">

        <TextView
            android:id="@+id/FindBook"
            android:text="@string/find_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dip"
            android:textSize="35sp"
            android:padding="5dip"
            android:textColor="#FFD600"
            android:typeface="serif" >
        </TextView>

        <TextView
            android:id="@+id/BookTitle"
            android:text="@string/book_title"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FindBook"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:textSize="20sp"
            android:padding="5dip"
            android:background="#FFD600"
            android:textColor="#000000"
            android:typeface="serif" >
        </TextView>

        <EditText
            android:id="@+id/findTitle"
            android:layout_width="230dip"
            android:background="@drawable/roundedittext"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FindBook"
            android:layout_toRightOf="@+id/BookTitle"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="10dip"
            android:hint="Enter Title"
            android:textStyle="italic"
            android:textSize="18sp"
            android:typeface="serif"
            android:gravity="center"
            android:padding="5dip" >
        </EditText>

        <TextView
            android:id="@+id/BookAuthor"
            android:text="@string/book_author"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BookTitle"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:textSize="20sp"
            android:padding="5dip"
            android:background="#FFD600"
            android:textColor="#000000"
            android:typeface="serif" >
        </TextView>

        <EditText
            android:id="@+id/findAuthor"
            android:layout_width="230dip"
            android:background="@drawable/roundedittext"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findTitle"
            android:layout_toRightOf="@+id/BookAuthor"
            android:layout_marginTop="23dip"
            android:layout_marginLeft="10dip"
            android:hint="Enter Author"
            android:textStyle="italic"
            android:textSize="18sp"
            android:typeface="serif"
            android:gravity="center"
            android:padding="5dip" >
        </EditText>

        <TextView
            android:id="@+id/BookISBN"
            android:text="@string/book_ISBN"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BookAuthor"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:textSize="20sp"
            android:padding="5dip"
            android:background="#FFD600"
            android:textColor="#000000"
            android:typeface="serif" >
        </TextView>

        <EditText
            android:id="@+id/findISBN"
            android:layout_width="230dip"
            android:background="@drawable/roundedittext"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findAuthor"
            android:layout_toRightOf="@+id/BookISBN"
            android:layout_marginTop="23dip"
            android:layout_marginLeft="10dip"
            android:hint="Enter ISBN"
            android:textStyle="italic"
            android:textSize="18sp"
            android:typeface="serif"
            android:gravity="center"
            android:padding="5dip" >
        </EditText>

        <TextView
            android:id="@+id/BookFormat"
            android:text="@string/book_format"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BookISBN"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:textSize="20sp"
            android:padding="5dip"
            android:background="#FFD600"
            android:textColor="#000000"
            android:typeface="serif" >
        </TextView>

        <EditText
            android:id="@+id/findFormat"
            android:layout_width="230dip"
            android:background="@drawable/roundedittext"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findISBN"
            android:layout_toRightOf="@+id/BookISBN"
            android:layout_marginTop="23dip"
            android:layout_marginLeft="10dip"
            android:hint="Enter Format"
            android:textStyle="italic"
            android:textSize="18sp"
            android:typeface="serif"
            android:gravity="center"
            android:padding="5dip" >
        </EditText>

        <TextView
            android:id="@+id/BookPubDate"
            android:text="@string/book_pub_date"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BookFormat"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:textSize="20sp"
            android:padding="5dip"
            android:background="#FFD600"
            android:textColor="#000000"
            android:typeface="serif" >
        </TextView>

        <EditText
            android:id="@+id/findPubDate"
            android:layout_width="230dip"
            android:background="@drawable/roundedittext"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findFormat"
            android:layout_toRightOf="@+id/BookPubDate"
            android:layout_marginTop="23dip"
            android:layout_marginLeft="10dip"
            android:hint="Enter Pub. Date"
            android:textStyle="italic"
            android:textSize="18sp"
            android:typeface="serif"
            android:gravity="center"
            android:padding="5dip" >
        </EditText>

        <TextView
            android:id="@+id/BookEdition"
            android:text="@string/book_edition"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BookPubDate"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="15dip"
            android:textSize="20sp"
            android:padding="5dip"
            android:background="#FFD600"
            android:textColor="#000000"
            android:typeface="serif" >
        </TextView>

        <EditText
            android:id="@+id/findEdition"
            android:layout_width="230dip"
            android:background="@drawable/roundedittext"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findPubDate"
            android:layout_toRightOf="@+id/BookEdition"
            android:layout_marginTop="23dip"
            android:layout_marginLeft="10dip"
            android:hint="Enter Edition"
            android:textStyle="italic"
            android:textSize="18sp"
            android:typeface="serif"
            android:gravity="center"
            android:padding="5dip" >
        </EditText>

        <Button
            android:id="@+id/searchButton"
            android:text="@string/searchButton"
            android:typeface="serif"
            android:layout_marginTop="40dip"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findEdition"
            android:padding="10dip"
            />

    </RelativeLayout>

</ScrollView>